--- a/Discordbot_Techxas/Discordbot_Techxas.csproj
+++ b/Discordbot_Techxas/Discordbot_Techxas.csproj
@@ -147,7 +147,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Modules\Hello.cs" />
     <Compile Include="Modules\Ping.cs" />
+    <Compile Include="Modules\PVP.cs" />
+    <Compile Include="Modules\Twitch.cs" />
+    <Compile Include="Modules\Twitter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
